--- a/dev/index.html
+++ b/dev/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="../src/main.js" defer></script>
+  <script src="src/main.ts" defer></script>
 </head>
 <body>
   <div id="app"></div>
